Fix links not contrast with #s-1 well in light mode

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -20,7 +20,10 @@
         border-radius: 50%;
         box-shadow: var(--box-shadow-md);
     }
-
+    a {
+        color: rgb(var(--prominence-hyperlinked));
+    }
+    
     @media (max-width: 56.25em) {
         flex-direction: column;
     }
